--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,6 +16,8 @@
       <ul class="nav navbar-nav">
         <li class="active">{{#link-to 'sites'}} Sites{{/link-to}}</li>
         <li>{{#link-to 'settings'}}Settings{{/link-to}}</li>
+        <li>{{#link-to 'registration'}}Registration{{/link-to}}</li>
+        <li>{{#link-to 'login'}}Login{{/link-to}}</li>
       </ul>
 
     </div><!-- /.navbar-collapse -->
